# Mindspore-HCA-HDU

./: .gitattributes  .gitignore  CMakeLists.txt  README.en.md  README.md  build.bat  build.sh  env.source  package.bat  package.sh  requirements.txt  setenv.bat  setup.py
.jenkins/test/config/: dependent_packages.yaml
cmake/: generate_op_registry.cmake
op_plugin/ops/: op_enum.h  reg.cc
op_plugin/ops/kernel/: acos_ext.cc  acos_ext_kernel.cc  acosh_ext.cc  asin_ext.cc  asinh_ext.cc  atan_ext.cc  atan_ext_kernel.cc  bmm_ext.cc  clone.cc  concat.cc  cos.cc  cumsum_ext.cc  div.cc  divmod.cc  divmods.cc  divs.cc  exp.cc  index.cc  index_select.cc  inplace_copy.cc  inplace_index_add_ext.cc  inplace_masked_fill_tensor.cc  inplace_relu.cc  inplace_relu_kernel.cc  inplace_scatter_src.cc  logical_and.cc  logical_not.cc  max.cc  max_dim.cc  maximum.cc  ones.cc  sin.cc  stack_ext.cc  stack_ext_kernel.cc  sum_ext.cc  unstack_ext_view.cc  zeros.cc  zerosLike_ext_kernel.cc  zeros_like.cc  zeros_like_ext.cc
op_plugin/utils/: ms_ext.cc  ms_ext.h  op_utils.cc  op_utils.h
patch/: op_plugin.patch
src/: op_plugin.cpp
test/: test_acos.py
tests/: run_tests.py
tests/st/mint/: test_acos.py  test_acosh.py  test_asin.py  test_asinh.py  test_atan.py  test_bmm_ext.py  test_cat.py  test_clone.py  test_copy_.py  test_cos.py  test_cumsum.py  test_div.py  test_exp.py  test_index.py  test_index_add_.py  test_index_select.py  test_logical_and.py  test_logical_not.py  test_max.py  test_max_dim.py  test_ones.py  test_perf_acos.py  test_perf_acosh.py  test_perf_asinh.py  test_perf_atan.py  test_perf_bmm_ext.py  test_perf_cat.py  test_perf_clone.py  test_perf_copy_.py  test_perf_cumsum.py  test_perf_div.py  test_perf_index.py  test_perf_index_select.py  test_perf_logical_and.py  test_perf_logical_not.py  test_perf_max.py  test_perf_max_dim.py  test_perf_ones.py  test_perf_relu_.py  test_perf_sin.py  (+10 more)
tests/utils/: mark_utils.py  test_op_utils.py  tools.py
